# SA-algsortare

./: CMakeLists.txt  plot.py
date/: date_aproape_sortat.csv  date_invers_sortat.csv  date_nr_mici.csv  date_random.csv  date_sortat.csv
src/: CMakeLists.txt  algoritmi.cpp  generare_input.cpp  main.cpp
test/: CMakeLists.txt  bubble_test.cpp  count_test.cpp  insertion_test.cpp  merge_test.cpp  quick_test.cpp  radix_test.cpp  selection_test.cpp  test.cpp
